--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -15,7 +15,7 @@ In this image, each node of the application network is represented by a box. Con
 
 Anypoint Visualizer provides a real-time view of your application network. It only displays nodes for applications or APIs that are running and discoverable. It also displays third-party service that are invoked by a Mule API, proxy or application. The connections between nodes are based on traffic between applications or APIs that occurred in the last seven days. If an application appears in multiple workers, they appear as two distinct nodes in the graph.
 
-Anypoint Visualizer also enables you to view CPU and memory usage for each node within your application network.
+Anypoint Visualizer also enables you to view multiple metrics including throughput, response time, and errors for each node within your application network.
 
 == Getting Started
 
@@ -31,15 +31,17 @@ From Anypoint Visualizer you can select which environments you want to view, arr
 
 The following use cases provide examples of how you can use Anypoint Visualizer.
 
-* **Discussing Current Design State**: Enterprise architect Kara has developed a plan for how the architecture she’s responsible for will accommodate a new product. She needs to capture its current state so she can plan the transition and get buy-in from stakeholders on her proposal.
+* *Discussing Current Design State*: Enterprise architect Kara has developed a plan for how the architecture she’s responsible for will accommodate a new product. She needs to capture its current state so she can plan the transition and get buy-in from stakeholders on her proposal.
 
-* **Implementing API-led Connectivity**: Site reliability engineer Tom is tired of maintaining several separate connections to Salesforce. He wants to identify redundant point-to-point connections so he can come up with requirements for a new process API.
+* *Implementing API-led Connectivity*: Site reliability engineer Tom is tired of maintaining several separate connections to Salesforce. He wants to identify redundant point-to-point connections so he can come up with requirements for a new process API.
 
-* **Exploring the Application Network**: Anypoint Visualizer provides a real-time view of the application network. This means that architects and product owners can see how the application network evolves explore the appliation network to discover and plan how to unlock data and break down siloed systems, knowing that the visualization is always up-to-date.
+* *Exploring the Application Network*: Anypoint Visualizer provides a real-time view of the application network. This means that architects and product owners can see how the application network evolves explore the appliation network to discover and plan how to unlock data and break down siloed systems, knowing that the visualization is always up-to-date.
 
-* **Define API-Led Connectivity Classifications**: Anypoint Visualizer enables you to assign the nodes of the graph into layers. This enables you to quickly inspect if the APIs are correctly categorized, and if the architectural principles of API-led connectivity are being followed.
+* *Define API-Led Connectivity Classifications*: Anypoint Visualizer enables you to assign the nodes of the graph into layers. This enables you to quickly inspect if the APIs are correctly categorized, and if the architectural principles of API-led connectivity are being followed.
 
-* **Accelerating time-to-production**: Architect Kara can see how projects are being built from the development environment, throughout test, staging, and production. This allows Kara to review the architecture as the code is being deployed and rise any concerns to ensure that best practices and agreed upon architecture are being followed without waiting for the documentation to be generted.
+* *Accelerating time-to-production*: Architect Kara can see how projects are being built from the development environment, throughout test, staging, and production. This allows Kara to review the architecture as the code is being deployed and rise any concerns to ensure that best practices and agreed upon architecture are being followed without waiting for the documentation to be generted.
+
+* *Resolving production issues faster*: Anypoint Visualizer allows you to understand the behaviour of all your APIs together with their dependency in a single view, which severely reduce the time needed to pint-point the root cause of an error or understand the impact of the performance of a particular API has on your clients.
 
 == See Also
 
