--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -29,13 +29,27 @@ Anypoint Visualizer displays only the environments you have permissions to view.
 
 _Result:_ After selecting the organization and environment group, Anypoint Visualizer displays a graph of your application network.
 
+== View Information About All Nodes In Your Network
+
+Use the drop-downs at the top left corner of the canvas to select the metric and the time window that you would like to show for all the nodes in your application network.
+One drop-down can be used to select one of the following metrics:
+
+* Inbound connections
+* Errors count
+* avg. response time
+* avg. throughput
+* avg. CPU consumption
+* avg. memory utilization.
+
+The other drop-down can be used to select the time window used to calculate the average values of the selected metric.
+
 == View Information About a Node in Your Network
 
 When you select a node within the graph, Anypoint Visualizer displays information about the node in the details panel on the right-hand side of the application. This panel is divided into the following sections:
 
-* **Details**: provides information about the node, including the layer the node is assigned to. You can change the layer from this section. See xref:layers.adoc[Use Layers in Anypoint Visualizer].
-* **CPU Utilization**: displays a graph showing recent CPU utilization for the node.
-* **Memory Usage**: displays a graph showing recent memory usage for the node.
+* *Details*: provides information about the node, including the layer the node is assigned to. You can change the layer from this section. See xref:layers.adoc[Use Layers in Anypoint Visualizer].
+* *Metrics summary*: provides monitoring metrics for the selected node including Errors count, avg. response time, avg. throughput, avg. CPU consumption, and avg. memory utilization.
+* *Metrics chart*: Shows the time-serie chart of the selected metric in metric drop-down.
 
 From the details panel, you can rename a node by clicking the *Rename Node* button.
 
