--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -3,4 +3,5 @@
 * xref:setup.adoc[Setup Anypoint Visualizer]
 * xref:view.adoc[View Application Information with Anypoint Visualizer]
 * xref:layers.adoc[Use Layers in Anypoint Visualizer]
+* xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
 * xref:technical.adoc[How Anypoint Visualizer Collects Application Data]
