--- a/modules/ROOT/pages/use-tags-in-visualizer.adoc
+++ b/modules/ROOT/pages/use-tags-in-visualizer.adoc
@@ -19,7 +19,7 @@ image::properties-tags.png[]
 
 By default, when you first view a node using Anypoint Visualizer, it will not have any tags assigned. You can assign a tag to an existing node using the UI if it does not already have the same tag applied through properties.
 
-. Select the application node to tag.
+. Select the application node to tag. +
 _Result:_ The Customization panel for the node appears in the right-hand panel as shown in the following image:
 +
 image::select-node.png[]
@@ -47,6 +47,6 @@ To delete a tag that was configured in the UI:
 
 == See Also
 
-xref:view.adoc[View Application Information with Anypoint Visualizer]
-xref:view.adoc#customize-view[Filtering by Tags]
-xref:layers.adoc[Use Layers in Anypoint Visualizer]
+* xref:view.adoc[View Application Information with Anypoint Visualizer]
+* xref:view.adoc#customize-view[Filtering by Tags]
+* xref:layers.adoc[Use Layers in Anypoint Visualizer]
