--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -1,21 +1,21 @@
-= Setup Anypoint Visualizer
+= Set up Anypoint Visualizer
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 
-This topic describes how to configure the roles and permission required to use Anypoint Visualizer. It also provides information and considerations when deploying applications.
+Configure the roles and permissions required to use Anypoint Visualizer and understand what to consider when deploying applications.
 
 == Configure Permissions
 
 To access Anypoint Visualizer, you must be assigned a role that has one of the following permissions:
 
-* Runtime Manager Read Applications: enables a user to view the graph of an application network, but does not allow them to make changes.
-* Visualizer Editor: enables a user to view and modify the graph of an application network. This permission can only be assigned within the master organization.
+* Runtime Manager Read Applications: Enables a user to view the graph of an application network, but does not allow them to make changes.
+* Visualizer Editor: Enables a user to view and modify the graph of an application network. This permission can only be assigned within the master organization.
 
 
 == Verify Supported Runtimes
 
-Anypoint Visualizer only includes activity from applications deployed to a supported Mule runtime. When deploying an Mule application or API, you must ensure that you are using a supported Mule runtime as the deployment target.
+Anypoint Visualizer includes only activity from applications deployed to a supported Mule runtime. When deploying an Mule application or API, you must ensure that you are using a supported Mule runtime as the deployment target.
 
 Anypoint Visualizer supports the following Mule runtimes running on CloudHub:
 
@@ -27,20 +27,21 @@ Anypoint Visualizer supports the following Mule runtimes running on CloudHub:
 
 To select these versions, expand the "old patched releases" section in the runtime versions drop-down.
 
-** Note: Applications using supported runtimes before June 30th, will have to update the runtime, which can be done with 0-downtime for CloudHub applications, APIs and proxies.
+[NOTE]
+You must update the runtime for applications using supported runtimes before June 30th, which you can do with zero downtime for CloudHub applications, APIs, and proxies.
 
 == Verify Supported Connectors
 
-Additionally, Anypoint Visualizer can monitor activity for outbound connections on specific connectors.
+Anypoint Visualizer can monitor activity for outbound connections on specific connectors.
 
-For Mule runtime, version 3.9.x, the following connectors are supported:
+For Mule Runtime, version 3.9.x, the following connectors are supported:
 
 * Salesforce
 * HTTP/HTTPS
 * Database
 * All connectors based on the Connector DevKit
 
-For Mule runtime, version 4.1.x, the following connectors are supported:
+For Mule Runtime, version 4.1.x, the following connectors are supported:
 
 * Salesforce
 * HTTP/HTTPS
@@ -49,15 +50,13 @@ For Mule runtime, version 4.1.x, the following connectors are supported:
 
 == Deploy an Application
 
-When deploying an application that you want to view in Anypoint Visualizer, ensure that you select a supported version of Mule runtime as the deployment target. See xref:runtime-manager::index.adoc[Runtime Manager] for more information.
+When you deploy an application you want to view in Anypoint Visualizer, ensure that you select a supported version of Mule runtime as the deployment target. See xref:runtime-manager::index.adoc[Runtime Manager] for more information.
 
-Applications using supported runtimes before June 30th, must update the runtime.
-
-After redeploying an application, all meta data collected by Anypoint Visualizer is removed for that application. The number of inbound connections for the application node is reset.
+After redeploying an application, all metadata collected by Anypoint Visualizer is removed for that application. The number of inbound connections for the application node is reset.
 
 == Disabling Data Collection
 
-The agent that Anypoint Visualizer uses to collect metadata may have a performance impact. To reduce performance impact for an application, perform one of the following:
+The agent that Anypoint Visualizer uses to collect metadata may have a performance impact. To reduce performance impact for an application, you can do one of the following:
 
 * Deploy the application using a default Mule runtime.
 * Disable data collection for a specific application. To disable data collection for an application, redeploy the application and set the following application property:
