--- a/modules/ROOT/pages/troubleshoot-visualizer.adoc
+++ b/modules/ROOT/pages/troubleshoot-visualizer.adoc
@@ -39,7 +39,7 @@ If you encounter an error while using Visualizer, you can try these solutions.
 |`You don’t have permissions to edit this node. Learn more.`
 |You need to have the *Visualizer Editor* permission to edit in Visualizer.
 |Learn more about the different permissions in Visualizer and how to configure xref:access-management::roles.adoc#custom-roles[custom roles].
-|`Metrics are hidden for this app because you don’t have the “Cloudhub viewer” role for its environment. Learn more.`
+|`Metrics are hidden for this app because you don’t have the “CloudHub viewer” role for its environment. Learn more.`
 |You have selected an application that belongs to an environment for which you are not a “CloudHub Viewer.” This node is only showing because it is a dependency of another node.
 |Learn more about xref:access-management::roles.adoc[configuring permissions].
 |===
